--- a/public/ol2.html
+++ b/public/ol2.html
@@ -16,7 +16,7 @@
     <body>
         <h1>MCQ</h1>
         <ol type="I">
-            #include<stdio.h>  is a ________________   header file.
+            <li>#include<stdio.h>  is a ________________   header file.</li>
                 <ol type="i" id="optionlist">
                     <li>pre-define</li>
                     <li>user-define</li>
@@ -25,7 +25,7 @@
                 </ol>
                 <br>
                 <br>
-             # also known as _____________ .
+             <li># also known as _____________ .</li>
                 <ol type="i" id="optionlist">
                     <li>preprocessor</li>
                     <li>pound sign</li>
