--- a/public/ol4.html
+++ b/public/ol4.html
@@ -8,7 +8,7 @@
         
     
         <h1>Days : </h1>
-        <ol type="A"start="Z">
+        <ol type="i" start="v">
             <li>sunday</li>
             <li>monday</li>
             <li>tuesday</li>
