--- a/public/ol_list.html
+++ b/public/ol_list.html
@@ -6,7 +6,7 @@
     <body>
         <h1> EPL Class</h1>
         <ol type="I">
-            Teachers : 
+            <li>Teachers : </li>
             <ol type="i">
                 <li>Mr.Mhaske Sir</li>
                 <li>Mr.Dhakane Sir</li>
@@ -14,7 +14,7 @@
             </ol>
             </ol>
             <ol type="I">
-            Courses : 
+            <li>Courses : </li>
             <ol type="i">
                 <li> C</li>
                 <li>CPP</li>
