--- a/public/ol1.html
+++ b/public/ol1.html
@@ -7,7 +7,7 @@
     <body>
        <h1>content in  languages</h1> 
        <ol type="A">
-        C Language
+        <li>C Language</li>
        <ol type="I">
         <li>Control Structure</li>
         <ol type="i">
@@ -36,9 +36,9 @@
         </ol>
         
        </ol>
-       DSA
+       <li>DSA</li>
        <br>
-       JAVA
+       <li>JAVA</li>
        </ol>
     </body>
 </html>
