--- a/public/ht.html
+++ b/public/ht.html
@@ -7,7 +7,7 @@
     <script>
         function bodyload()
         {
-            alert( "Total no. of heading h3 :" document.get Elements  By Tag Name("h2").length);
+            alert("Total no. of heading(h3):"+document.getElementsByTagName("h3").length);
             
         }
     </script>
