--- a/public/images1.html
+++ b/public/images1.html
@@ -9,11 +9,11 @@
         align="right" hspace="20" vspace="20" crossorigin="use-credentials"
         decoding="auto" importance="auto">
 
-        <p>Chhatrapati Shivaji Maharaj, born on February 19, 1630, 
+        <blockquote>Chhatrapati Shivaji Maharaj, born on February 19, 1630, 
             in the hill-fort of Shivneri, was a prominent Maratha warrior 
             and the founder of the Maratha Empire in western India. 
             His life and legacy have left an indelible mark on Indian history, 
             embodying the spirit of resistance against the Mughal Empire and the
-             quest for self-governance.</p>
+             quest for self-governance.</blockquote>
     </body>
 </html>
